[EDIT] code style guide - renderengine

--- a/wk2_fps.vcxproj
+++ b/wk2_fps.vcxproj
@@ -23,10 +23,10 @@
     <ClCompile Include="src\entities\Entity.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderEngine\Loader.cpp" />
-    <ClCompile Include="src\renderEngine\ObjLoader.cpp" />
+    <ClCompile Include="src\renderEngine\obj_loader.cpp" />
     <ClCompile Include="src\renderEngine\Renderer.cpp" />
-    <ClCompile Include="src\shaders\ShaderProgram.cpp" />
-    <ClCompile Include="src\shaders\StaticShader.cpp" />
+    <ClCompile Include="src\shaders\shader_program.cpp" />
+    <ClCompile Include="src\shaders\static_shader.cpp" />
     <ClCompile Include="src\toolbox\math.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -34,10 +34,10 @@
     <ClInclude Include="src\entities\Entity.h" />
     <ClInclude Include="src\models\Model.h" />
     <ClInclude Include="src\renderEngine\Loader.h" />
-    <ClInclude Include="src\renderEngine\ObjLoader.h" />
+    <ClInclude Include="src\renderEngine\obj_loader.h" />
     <ClInclude Include="src\renderEngine\Renderer.h" />
-    <ClInclude Include="src\shaders\ShaderProgram.h" />
-    <ClInclude Include="src\shaders\StaticShader.h" />
+    <ClInclude Include="src\shaders\shader_program.h" />
+    <ClInclude Include="src\shaders\static_shader.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\toolbox\math.h" />
   </ItemGroup>
