[EDIT] code style guide finished

--- a/wk2_fps.vcxproj
+++ b/wk2_fps.vcxproj
@@ -19,27 +19,27 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\entities\Camera.cpp" />
-    <ClCompile Include="src\entities\Entity.cpp" />
+    <ClCompile Include="src\entities\camera.cpp" />
+    <ClCompile Include="src\entities\entity.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\renderEngine\Loader.cpp" />
+    <ClCompile Include="src\renderEngine\loader.cpp" />
     <ClCompile Include="src\renderEngine\obj_loader.cpp" />
-    <ClCompile Include="src\renderEngine\Renderer.cpp" />
+    <ClCompile Include="src\renderEngine\renderer.cpp" />
     <ClCompile Include="src\shaders\shader_program.cpp" />
     <ClCompile Include="src\shaders\static_shader.cpp" />
-    <ClCompile Include="src\toolbox\math.cpp" />
+    <ClCompile Include="src\toolbox\toolbox.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\entities\Camera.h" />
-    <ClInclude Include="src\entities\Entity.h" />
-    <ClInclude Include="src\models\Model.h" />
-    <ClInclude Include="src\renderEngine\Loader.h" />
+    <ClInclude Include="src\entities\camera.h" />
+    <ClInclude Include="src\entities\entity.h" />
+    <ClInclude Include="src\models\model.h" />
+    <ClInclude Include="src\renderEngine\loader.h" />
     <ClInclude Include="src\renderEngine\obj_loader.h" />
-    <ClInclude Include="src\renderEngine\Renderer.h" />
+    <ClInclude Include="src\renderEngine\renderer.h" />
     <ClInclude Include="src\shaders\shader_program.h" />
     <ClInclude Include="src\shaders\static_shader.h" />
     <ClInclude Include="src\stb_image.h" />
-    <ClInclude Include="src\toolbox\math.h" />
+    <ClInclude Include="src\toolbox\toolbox.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
