--- a/.gitignore
+++ b/.gitignore
@@ -425,4 +425,7 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 *.tlog
 
+docs/*
+doc/*
+
 # End of https://www.toptal.com/developers/gitignore/api/c++,visualstudio,visualstudiocode,opencv
