--- a/wk2_fps.vcxproj
+++ b/wk2_fps.vcxproj
@@ -59,6 +59,7 @@
     <Xml Include="res\haarcascade_frontalface_alt.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Avans Hogeschool\Kim Veldhoen - Proftaak 2.4\pose_iter_160000.caffemodel" />
     <None Include="res\pose\coco\pose_deploy_linevec.prototxt" />
     <None Include="res\pose\mpi\pose_deploy_linevec_faster_4_stages.prototxt" />
     <None Include="res\pose\mpi\pose_iter_160000.caffemodel" />
